force-app/main/default/objects/Transaction__c/fields/Transaction_Type__c.field-meta.xml
<CustomField>
    <fullName>Transaction_Type__c</fullName>
    <label>Transaction Type</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Payment Gateway</fullName>
                <default>true</default>
                <label>Payment Gateway</label>
            </value>
            <value>
                <fullName>Complimentary</fullName>
            </value>
            <value>
                <fullName>Offline Transaction</fullName>
            </value>
            <value>
                <fullName>Wallet</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>