force-app/main/default/objects/Transaction__c/recordTypes/Charge.recordType-meta.xml
<RecordType>
    <fullName>Charge</fullName>
    <active>true</active>
    <description>For Authorizations, Charges and Refunds.</description>
    <label>Charge</label>
</RecordType>