force-app/main/default/objects/Transaction__c/recordTypes/Payout.recordType-meta.xml
<RecordType>
    <fullName>Payout</fullName>
    <active>false</active>
    <description>For Payouts.</description>
    <label>Payout</label>
</RecordType>