force-app/main/default/objects/Transaction__c/recordTypes/Transfer.recordType-meta.xml
<RecordType>
    <fullName>Transfer</fullName>
    <active>false</active>
    <description>For Transfers and Transfer Reversals.</description>
    <label>Transfer</label>
</RecordType>