force-app/main/default/objects/Transaction__c/listViews/All_Complementary_Transactions.listView-meta.xml
<ListView>
    <fullName>All_Complementary_Transactions</fullName>
    <columns>NAME</columns>
    <columns>Amount__c</columns>
    <columns>Contact__c</columns>
    <columns>Status__c</columns>
    <columns>TransactionReference__c</columns>
    <columns>TransactionDate__c</columns>
    <columns>LAST_UPDATE</columns>
    <columns>CREATED_DATE</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>Transaction_Type__c</field>
        <operation>equals</operation>
        <value>Complimentary</value>
    </filters>
    <label>All Complementary Transactions</label>
</ListView>