force-app/main/default/objects/Transaction__c/listViews/All_Declined_Transactions.listView-meta.xml
<ListView>
    <fullName>All_Declined_Transactions</fullName>
    <columns>NAME</columns>
    <columns>Amount__c</columns>
    <columns>PaymentMethodType__c</columns>
    <columns>PaymentMethod__c</columns>
    <columns>Contact__c</columns>
    <columns>Status__c</columns>
    <columns>TransactionReference__c</columns>
    <columns>TransactionDate__c</columns>
    <columns>LAST_UPDATE</columns>
    <columns>CREATED_DATE</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>Status__c</field>
        <operation>equals</operation>
        <value>failed</value>
    </filters>
    <label>All Declined Transactions</label>
</ListView>