force-app/main/default/objects/Transaction__c/listViews/AllTransactions.listView-meta.xml
<ListView>
    <fullName>AllTransactions</fullName>
    <columns>NAME</columns>
    <columns>PaymentMethodType__c</columns>
    <columns>Transaction_Type__c</columns>
    <columns>Invoice__c</columns>
    <columns>Amount__c</columns>
    <columns>Contact__c</columns>
    <columns>Status__c</columns>
    <columns>TransactionReference__c</columns>
    <columns>TransactionDate__c</columns>
    <columns>LAST_UPDATE</columns>
    <columns>CREATED_DATE</columns>
    <filterScope>Everything</filterScope>
    <label>AllTransactions</label>
</ListView>